[FIX] customer index pagination and docs
